public/themes/oiron/overrides.css
/* ... */
@media (max-width: 1279px) {
  .banner-slider .deco-wrap {
    top: -120px;
  }
}

.banner-slider .slide.slick-active .deco-wrap {
  transform: translateX(0px) scale(1);
  opacity: 0.3;
}

.banner-slider .deco {
  border-radius: 80px;
  transform: rotate(45deg);
  position: absolute;
}

.banner-slider .deco.top {
  width: 800px;
  height: 800px;
}

.theme--light .banner-slider .deco.top {
  background-color: var(--v-primarylight-base);
}

.theme--dark .banner-slider .deco.top {
  background-color: var(--v-primarydark-base);
}

.banner-slider .deco.top.s1 {
  top: -400px;
  right: -250px;
}

.banner-slider .deco.top.s2 {
  top: -400px;
  left: -250px;
}

.banner-slider .deco.top.s3 {
  top: -360px;
  left: 150px;
}

@media (max-width: 599px) {
  .banner-slider .deco.top.s3 {
    left: -120px;
  }
}

.banner-slider .deco.bottom {
  width: 790px;
  height: 815px;
}

.theme--light .banner-slider .deco.bottom {
  background-color: var(--v-secondarylight-base);
}

.theme--dark .banner-slider .deco.bottom {
  background-color: var(--v-secondarydark-base);
}

.banner-slider .deco.bottom.s1 {
  top: -390px;
  right: -240px;
}

.banner-slider .deco.bottom.s2 {
  top: -390px;
  left: -240px;
}

.banner-slider .deco.bottom.s3 {
  top: -360px;
  left: 150px;
}

@media (max-width: 599px) {
  .banner-slider .deco.bottom.s3 {
    left: -140px;
  }
}

/* ── About Deco (agency theme) ── */
#about .root {
  margin-bottom: 200px;
}

#about .deco > * {
  transform: rotate(45deg);
  position: absolute;
}

#about .deco {
  position: relative;
  top: -300px;
  left: -150px;
}

@media (max-width: 959px) {
  #about .root {
    margin-bottom: 0;
  }

  #about .root h4 {
    text-align: center;
    margin-top: -24px;
  }

  #about .deco {
    display: none;
  }
}

/* ── About Puzzle Pieces (agency theme) ── */
#about .puzzle {
  position: relative;
  top: -40px;
  left: 60px;
}

#about .puzzle div {
  overflow: hidden;
  position: absolute;
  background: #dedede;
  transform: rotate(45deg);
}

#about .puzzle span {
  background-size: 100%;
  width: 320px;
  height: 320px;
  display: block;
  position: relative;
  top: -110px;
  transform: rotate(-45deg);
}

#about .piece-small-top {
  width: 100px;
  height: 100px;
  border-radius: 16px;
  top: -180px;
  left: 120px;
}

#about .piece-small-top span {
  background-image: url("https://pixinlink.ru/110x110/пазл-абстракция-голубой");
  background-repeat: no-repeat;
  background-position: 40px center;
  left: -80px;
}

#about .piece-small-bottom {
  width: 100px;
  height: 100px;
  border-radius: 16px;
  top: 70px;
  left: 80px;
}

#about .piece-small-bottom span {
  top: -130px;
  background-image: url("https://pixinlink.ru/75x75/пазл-абстракция-синий");
  background-repeat: no-repeat;
  background-position: 40px center;
  left: -50px;
}

#about .deco .big {
  background: var(--v-primary-base);
  width: 350px;
  height: 350px;
  opacity: 0.08;
  border-radius: 80px;
  top: 60px;
  left: 120px;
}

#about .deco .medium {
  background: var(--v-secondary-base);
  width: 180px;
  height: 180px;
  opacity: 0.1;
  border-radius: 40px;
  top: 20px;
  left: 80px;
}

#about .deco .small {
  border: 8px solid var(--v-primary-base);
  opacity: 0.3;
  border-radius: 10px;
  width: 60px;
  height: 60px;
  top: 250px;
  left: 380px;
}

/* ── Title Deco (agency theme) ── */
.title-deco {
  position: relative;
}

.title-deco:before {
  content: "";
  width: 210px;
  height: 210px;
  background: var(--v-primary-base);
  border-radius: 24px;
  position: absolute;
  top: 0;
  left: 0;
  transform: rotate(-45deg);
}

.title-deco h3 {
  color: #FFF;
  width: 120px;
  position: relative;
  text-transform: capitalize;
  font-size: 48px;
  font-weight: 700;
  line-height: 62px;
  padding-left: 20px;
}

@media (min-width: 1280px) {
  .title-deco h3 {
    height: 160px;
    margin-left: 24px;
  }
}

@media (min-width: 960px) {
  .title-deco h3 {
    padding-top: 40px;
    margin-top: 80px;
  }
}

@media (max-width: 1279px) {
  .title-deco h3 {
    font-size: 38px;
    line-height: 50px;
  }

  .title-deco:before {
    left: 24px;
  }
}

@media (max-width: 959px) {
  .title-deco:before {
    display: none;
  }

  .title-deco h3 {
    width: auto;
    text-align: center;
    padding-left: 0;
    color: var(--v-primary-light-base, var(--v-primary-base));
  }
}

@media (max-width: 599px) {
  .title-deco h3 {
    font-size: 32px;
    line-height: 42px;
  }
}

/* ── Services Floating Artwork (agency theme) ── */
#services .root {
  position: relative;
  padding: 80px 0px 80px 0px;
}

.theme--light #services .root {
  background-color: var(--v-primarylight-base);
  position: relative;
}

.theme--light #services .root:before {
  content: "";
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background-color: #FFF;
  opacity: 0.8;
}

#services .carousel-header {
  position: relative;
  z-index: 3;
}

@media (min-width: 600px) {
  #services .carousel-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
}

#services .view-all {
  display: flex;
  margin-bottom: 50px;
}

@media (min-width: 1280px) {
  #services .view-all {
    margin-right: 160px;
  }
}

@media (min-width: 600px) {
  #services .view-all {
    font-size: 24px;
  }
}

@media (max-width: 959px) {
  #services .view-all {
    margin-bottom: 32px;
  }
}

#services .carousel-handle {
  position: relative;
  z-index: 1;
}

#services .carousel-wrap {
  position: absolute;
  z-index: 2;
  width: 100%;
  overflow: hidden;
}

#services .item {
  padding: 0px 8px 0px 8px;
  max-width: 260px;
}

#services .item:focus {
  outline: none;
}

@media (max-width: 1279px) {
  #services .carousel-prop {
    display: none;
  }
}

#services .carousel-prop div {
  width: 250px;
}

#services .floating-artwork {
  position: absolute;
  width: 100%;
  left: 0;
  top: 40px;
}

@media (min-width: 1280px) {
  #services .floating-artwork {
    left: 24px;
  }
}
/* ... */

